--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/railway
-spring.datasource.username = root
-spring.datasource.password = Lyn!91195084
+spring.datasource.url=jdbc:${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+
+# For Local Testing
+# spring.datasource.url = jdbc:mysql://localhost:3306/railway
+# spring.datasource.username = root
+# spring.datasource.password = XXXXXXX
